@startuml
class HeroAircraft {
    - {static} instance:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getInstance():HeroAircraft
    + forward():void
    + resetLocation():void
}
abstract class BaseGame {
    - heroAircraft:HeroAircraft
    + action():void
}
HeroAircraft <-- BaseGame
HeroAircraft <-- HeroAircraft
@enduml